--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
     "mysql2": "^3.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
