--- a/back/package.json
+++ b/back/package.json
@@ -17,8 +17,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0"
