--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app",
-    "start": "node app"
+    "start": "cross-env NODE_ENV=production pm2 start app"
   },
   "author": "joseph",
   "license": "ISC",
@@ -14,14 +14,18 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
+    "pm2": "^5.3.0",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0"
   },
